<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp_options"
    android:weightSum="10.25"
    android:padding="25dp"
    android:orientation="vertical">

    <View
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_weight="0.5" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:background="@drawable/logo6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/login2"
        android:textColor="@color/blue"
        android:textSize="50sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_weight="0.75"
        android:text="@string/signup"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible" />
    <View
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_weight="0.25" />

    <Button
        android:id="@+id/signBtn1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_weight="0.75"
        android:background="@drawable/rounded_btn"
        android:text="@string/stu" />

    <View
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_weight=".25" />
    <Button
        android:id="@+id/signBtn2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_weight="0.75"
        android:background="@drawable/rounded_btn"
        android:text="@string/Dri" />
    <View
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_weight=".25" />

    <Button
        android:id="@+id/signBtn3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_weight="0.75"
        android:background="@drawable/rounded_btn"
        android:text="@string/Adm" />




    <View
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_weight=".25" />

    <Button
        android:id="@+id/signBtn4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_weight="0.75"
        android:background="@drawable/rounded_btn"
        android:text="@string/Par" />

    <View
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_weight=".5" />

    <TextView
        android:id="@+id/loginLink"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_weight="0.5"
        android:text="@string/msg2"
        android:textColor="@color/linkBlue"
        android:textSize="20sp"
        android:textStyle="italic"
        android:visibility="visible" />
</LinearLayout>