<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".Driver_SignUp"
    android:weightSum="9"
    android:orientation="vertical">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:background="@drawable/logo6"
        android:contentDescription="@string/login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/signup"
        android:textColor="@color/blue"
        android:textSize="40sp"
        android:textStyle="bold" />
    <View
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_weight=".10" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/Dri2"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/driUsName"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_weight="0.75"
        android:hint="@string/EnUsername"
        android:background="@drawable/roundtextfield"
        android:importantForAutofill="no"
        android:inputType="text" />

    <View
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_weight=".10" />

    <EditText
        android:id="@+id/driPass"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_weight="0.75"
        android:hint="@string/EnPassword"
        android:background="@drawable/roundtextfield"
        android:inputType="textPassword" />

    <View
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_weight=".10" />
    <EditText
        android:id="@+id/driPhon"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_weight="0.75"
        android:hint="@string/EnPhone"
        android:background="@drawable/roundtextfield"
        android:inputType="text" />
    <View
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_weight=".10" />
    <EditText
        android:id="@+id/driCnic"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_weight="0.75"
        android:hint="@string/EnCnic"
        android:background="@drawable/roundtextfield"
        android:inputType="text" />
    <View
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_weight=".10" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:weightSum="1.5">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="0.5">
            <View
                android:layout_width="0sp"
                android:layout_height="0sp"
                android:layout_weight=".10" />
            <EditText
                android:id="@+id/driAddrr"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="start"
                android:layout_weight="0.4"
                android:inputType="textMultiLine"
                android:lines="1"
                 android:minLines="5"
                android:scrollbars="vertical"
                android:background="@drawable/roundtextfield"
                android:hint="@string/EnAddress"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="0.5">

            <ImageView
                android:id="@+id/driProPic"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.35"
                android:padding="1dp"
                android:src="@drawable/profile" />

            <Button
                android:id="@+id/driUpload_imagebtn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="0.15"
                android:background="@drawable/rounded_btn"
                android:text="Upload Image" />
    </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_weight=".20" />

    <Button
        android:id="@+id/driSignBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.75"
        android:background="@drawable/rounded_btn"
        android:text="@string/createAcc" />

</LinearLayout>
